@@ -457,6 +457,8 @@ Library
 
 - Issue #28652: Make loop methods reject socket kinds they do not support.
 
+- Issue #28653: Fix a refleak in functools.lru_cache.
+
 IDLE
 ----
 
